# speki-cli

./: Cargo.toml  todo
src/: add_cards.rs  collections.rs  incread.rs  main.rs  review.rs  unfinished.rs  utils.rs
