[package]
name = "speki-cli"
version = "0.1.2"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "cli version of speki"
license = "GPL-2.0-only"


[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
skim = "0.10.4"
speki-core = "0.1.5"
#speki-core = { path = "../speki-core" }
text_io = "0.1.12"
strum = "0.24"
strum_macros = "0.24"
tordir = "0.1.3"
serde = "1.0.210"
serde_json = "1.0.128"
uuid = { version = "1.0", features = ["v4", "serde"] }
#enumselector = { path = "../../enumselector" }
enumselector = "0.1.4"
dialoguer = "0.11.0"
opener = "0.7.2"
console = "0.15.8"
